wrapped new banner in overflow to fix hidden scroll issue

--- a/src/components/banner/ShipBanner.module.css
+++ b/src/components/banner/ShipBanner.module.css
@@ -1,3 +1,7 @@
+.overflow {
+  overflow-x: hidden;
+}
+
 .banner {
   display: flex;
 }
