--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
 }
 
 main {
-  overflow: auto;
   flex-grow: 1;
 }
 
